--- a/re_dashboard/templates/sidebarsolar.html
+++ b/re_dashboard/templates/sidebarsolar.html
@@ -489,12 +489,12 @@ body.dark-mode .nav-link.active {
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">
+      <a class="nav-link" href="{% url 'wind_dashboard' %}">
         <i class="fas fa-chart-line"></i>&nbsp; Interactive Dashboard
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">
+      <a class="nav-link" href="{% url 'user_generation_info' %}">
         <i class="fas fa-user"></i>&nbsp; Profile Information
       </a>
     </li>
