--- a/re_dashboard/customer_dashboard/templates/wind_genration_hovers.html
+++ b/re_dashboard/customer_dashboard/templates/wind_genration_hovers.html
@@ -83,9 +83,7 @@
   </div>
 </div>
 
-<!-- ========== Modals ========== -->
-
- 
+<!-- ========== Modals ========== --> 
 <!-- Date Range Modal -->
 <div class="modal fade" id="dateRangeModal" tabindex="-1">
   <div class="modal-dialog">
@@ -287,7 +285,6 @@
         tree: rawData,
         key: 'hours',
         groups: ['wtg'],
-        spacing: 3,
         borderColor: '#fff',
         layoutAlgorithm: 'binary',
         minVisibleSize: 20,
@@ -296,7 +293,7 @@
           formatter: ctx => ctx.raw._data.wtg,
           align: 'center',
           color: 'white',
-          font: { size: 14, weight: 'bold' }
+          font: { size: 12  }
         },
         backgroundColor: (ctx) => colors[ctx.index % colors.length]
       }]
